--- a/index.html
+++ b/index.html
@@ -1,2 +1,20 @@
-黃奕傑
-pt2057
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>國立臺中科技大學</title>
+</head>
+<body>
+    <h1>
+        黃奕傑<br>
+        pt2057
+    </h1>
+    <hr>
+    <!-- 123 -->
+
+
+
+</body>
+</html>
