--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <a href="table.html">表格練習</a>
     <br>
     <a href="css.html">css選擇器</a>
+    <br>
+    <a href="background.html">css背景</a>
 
 
 </body>
